--- a/Placement/src/Elements/SignUp.css
+++ b/Placement/src/Elements/SignUp.css
@@ -51,6 +51,7 @@
     display: flex;
     justify-content: space-around;
     align-items: top;
+    padding-left:90px ;
     #choose{
         width:fit-content;
         height:80vh;
@@ -59,7 +60,9 @@
         top:80px;
         left:40px;
         padding:20px;
-        background-color: rgb(9, 57, 97);
+        background-color: rgba(9, 57, 97, 0.349);
+        border:2px solid black;
+        border-radius: 8px;
        
         display: flex;
         justify-content: space-around;
@@ -76,6 +79,30 @@
 
     }
     
+}
+
+
+.ele2Main12{
+    background-color: rgba(10, 99, 80, 0.507);
+    height:fit-content;
+    width:fit-content;
+    padding:10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    border:2px solid black;
+    border-radius: 8px;
+    margin-bottom:40px ;
+   
+}
+
+
+#outerofDataa{
+    width:100%;
+    display:flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 
