--- a/Placement/src/Elements/SignUp.css
+++ b/Placement/src/Elements/SignUp.css
@@ -4,12 +4,16 @@
     display:flex;
     padding-top: 30px;
     justify-content: center;
+    margin-bottom: 40px;
 }
+   
+
 #main{
     border:3px solid black;
     height:70vh;
     background-color: blanchedalmond;
     border-radius: 16px;
+    margin-bottom: 50px;
     width:60vw;
     display: flex;
     flex-direction: column;
@@ -60,7 +64,7 @@
         top:80px;
         left:40px;
         padding:20px;
-        background-color: rgba(9, 57, 97, 0.349);
+        background-color: rgb(10, 122, 150);
         border:2px solid black;
         border-radius: 8px;
        
@@ -105,4 +109,298 @@
     flex-wrap: wrap;
 }
 
+#homediv{
+    height:100vh;
+    width:100vw;
+    z-index: 1;
+    display: flex;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    img{
+        height:300px;
+        margin-bottom: 40px;
+        border-radius: 8px;
+        box-shadow: 2px 2px 3px 3px yellow;
+    }
+    p{
+        font-size: xxx-large;
+        font-weight: 1000;
+        background: linear-gradient(90deg, rgba(10,149,121,1) 0%, rgba(205,64,17,1) 49%, rgba(62,149,32,1) 100%);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        }
+}
 
+
+
+#student{
+    height:40px;
+    width:90px;
+    background-color: rgb(179, 106, 11);
+    color:white;
+    border:2px solid black;
+    border-radius: 16px;
+    padding:px;
+    text-decoration: none;
+    margin-right:20px;
+}
+
+
+#recruiter{
+    height:40px;
+    width:90px;
+    text-decoration: underline;
+    background-color: white;
+    color:black;
+    border:0px solid black;
+    border-radius: 16px;
+    padding:px;
+    margin-right:20px;
+}
+footer{
+  margin-top: 20px;
+  background-color: rgb(37, 36, 36);
+  color:white;
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 20px;
+  div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    h1{
+      margin-bottom:6px;
+      font-size: 40px;
+    }
+
+    h3{
+      margin-top: 6px;
+      font-size: 25px;
+    }
+
+    p{
+      margin-bottom: 3px;
+      font-size: 13px;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.circle{
+
+    background-color:rgba(37, 216, 216, 0.4);
+        border-radius:50px;
+        z-index:-1;
+        position:fixed;
+    
+    
+      }
+      #circle1{
+    
+        animation:animate 2s alternate 0s infinite,  move1 8s linear 0s infinite normal;
+      }
+      #circle2{
+    
+        animation:animate 4s alternate 0s infinite,  move2 12s linear 0s infinite normal;
+      }
+      #circle3{
+    
+        animation:animate 8s alternate 0s infinite,  move3 16s linear 0s infinite normal;
+      }
+      #circle4{
+    
+        animation:animate 3s alternate 0s infinite,  move4 10s linear 0s infinite normal;
+      }
+      #circle5{
+    
+        animation:animate 5s alternate 0s infinite,  move5 8s linear 0s infinite normal;
+      }
+      #circle6{
+    
+        animation:animate 2s alternate 0s infinite,  move6 16s linear 0s infinite normal;
+      }
+      #circle7{
+    
+        animation:animate 5s alternate 0s infinite,  move7 14s linear 0s infinite normal;
+      }
+      #circle8{
+    
+        animation:animate 6s alternate 0s infinite,  move8 8s linear 0s infinite normal;
+      }
+    
+    
+    
+    
+    
+    
+    
+    @keyframes animate{
+      0%{height:2px;
+        width:2px;
+        box-shadow: 0px 0px 0px 0px cyan;
+        }
+        50%{height:6px;
+        width:6px;
+        box-shadow: 7px 7px 44px 18px cyan;}
+        100%{
+          height:8px;
+          width:8px;
+          box-shadow: 12px 12px 76px 12px cyan;
+        }
+    }
+    
+    @keyframes move1{
+    0%{
+     left:67vw;
+     top:-2vh;
+    
+    }
+    50%{
+      left:60vw;
+      top:35vh;
+    }
+    100%{
+      left:-2vw;
+      top:50vh;
+    }
+    
+    }
+    @keyframes move2{
+      0%{
+       left:-2vw;
+       top:-2vh;
+    
+      }
+      50%{
+        left:70vw;
+        top:50vh;
+      }
+      100%{
+        left:120vw;
+        top:120vh;
+      }
+    
+      }
+      @keyframes move3{
+        0%{
+         left:-2vw;
+         top:87vh;
+    
+        }
+        50%{
+          left:65vw;
+          top:53vh;
+        }
+        100%{
+          left:-2vw;
+          top:34vh;
+        }
+    
+        }
+        @keyframes move4{
+          0%{
+           left:-2vw;
+           top:-2vh;
+    
+          }
+          50%{
+            left:70vw;
+            top:50vh;
+          }
+          100%{
+            left:120vw;
+            top:120vh;
+          }
+    
+          }
+          @keyframes move5{
+            0%{
+             left:105vw;
+             top:80vh;
+    
+            }
+            50%{
+              left:70vw;
+              top:30vh;
+            }
+            100%{
+              left:-2vw;
+              top:37vh;
+            }
+    
+            }
+            @keyframes move6{
+              0%{
+               left:70vw;
+               top:-2vh;
+    
+              }
+              50%{
+                left:80vw;
+                top:23vh;
+              }
+              100%{
+                left:30vw;
+                top:110vh;
+              }
+    
+              }
+              @keyframes move7{
+                0%{
+                 left:-2vw;
+                 top:60vh;
+    
+                }
+                50%{
+                  left:80vw;
+                  top:40vh;
+                }
+                100%{
+                  left:120vw;
+                  top:60vh;
+                }
+    
+                }
+                @keyframes move8{
+                  0%{
+                   left:50vw;
+                   top:-2vh;
+    
+                  }
+                  50%{
+                    left:20vw;
+                    top:76vh;
+                  }
+                  100%{
+                    left:40vw;
+                    top:110vh;
+                  }
+    
+                  }
